# ITMO_ICT_WebDevelopment_tools_2023-2024

./: .gitignore  mkdocs.yml
.github/workflows/: ci.yaml  ci.yml
.gitlab/workflows/: ci.yml
K33402/Nikitin_Pavel/reports/: mkdocs.yml
docs/lab-2/: task1.md  task2.md
practice_1/: main.py
practice_2/: connection.py  main.py  models.py
practice_3/: alembic.ini  connection.py  models.py
practice_3/migrations/: env.py
practice_3/migrations/versions/: a0a091607c06_skill_added.py  a1820f870f47_skill_added.py
students/K33391/Volgin_Leonid/: mkdocs.yml
students/K33392/Rybalko_Oleg/: docker-compose.yaml  mkdocs.yml
students/K33402/Ekushev_Vlad/: mkdocs.yml  package.json  requirements.txt
students/K33402/Ekushev_Vlad/labs/lab2/: pyproject.toml
students/K33402/Ekushev_Vlad/labs/lab2/app/: main.py  models.py
students/K33402/Ekushev_Vlad/labs/lab2/app/core/: config.py  db.py  errors.py  utils.py
students/K33402/Ekushev_Vlad/labs/lab2/app/models/: healthcheck.py  main.py  user.py
students/K33402/Ekushev_Vlad/labs/lab2/app/routers/: __init__.py  auth.py  balances.py  categories.py  root.py  transactions.py  users.py
students/K33402/Ekushev_Vlad/labs/lab2/app/services/: auth.py  user.py
students/K33402/Ekushev_Vlad/labs/lab2/migrations/: env.py
students/K33402/Ekushev_Vlad/labs/lab2_2/: .env.example  pyproject.toml
students/K33402/Ekushev_Vlad/labs/lab2_2/task1/: async_sum.py  process_sum.py  thread_sum.py
students/K33402/Ekushev_Vlad/labs/lab2_2/task2/: async_parse.py  database.py  process_parse.py  thread_parse.py
students/K33402/Ekushev_Vlad/prac/2.3/: pyproject.toml
students/K33402/Ekushev_Vlad/prac/2.3/app/: db.py  main.py
students/K33402/Ekushev_Vlad/prac/2.3/migrations/: env.py
students/K33402/Ekushev_Vlad/prac/2.3/migrations/versions/: 1a1213b86fod_add_skill_level.py
students/K33402/Maliutina_Kate/: mkdocs.yml
students/K33421/Daniil_Maximov/: mkdocs.yml
students/K33421/Mikulina_Alice/: mkdocs.yml
students/k33392/Miturskii_Bogdan/: mkdocs.yml
students/k33392/Stukalov_Artem/lab/lab-3/task-1/py-bench/: pyproject.toml  results.txt
students/k33392/Stukalov_Artem/lab/lab-3/task-1/py-bench/src/: bench.py  main.py
students/k33392/Stukalov_Artem/lab/lab-3/task-1/py-bench/src/runners/: __init__.py  async.py  base.py  multiprocess.py  simple.py  threaded.py  threaded_pool.py
students/k33392/Stukalov_Artem/lab/lab-4/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
students/k33392/Stukalov_Artem/lab/lab-4/migrations/: env.py
students/k33392/Stukalov_Artem/lab/lab-4/migrations/versions/: 464576bb3403_initial.py
students/k33392/Stukalov_Artem/lab/lab-4/src/url_parser/: main.py
students/k33392/Stukalov_Artem/lab/lab-4/src/web_api/: main.py  models.py
students/k33392/Stukalov_Artem/lab/lab-4/src/web_api/config/: db.py  env.py
students/k33392/Stukalov_Artem/lab/lab-4/src/web_api/routes/: books.py  exchange_requests.py  main.py  users.py  wishlists.py
students/k33392/Stukalov_Artem/lab/lab-4/src/web_api/services/: auth.py  books.py  exchange_requests.py  users.py  wishlists.py
students/k33392/Stukalov_Artem/lab/report/: mkdocs.yml  pyproject.toml
students/k33392/Stukalov_Artem/lab/report/docs/: index.md
students/k33392/Stukalov_Artem/lab/report/docs/lab2/: configuration.md  models.md  routes.md  services.md
students/k33392/Stukalov_Artem/lab/report/docs/lab3/: task-1.md  task-2.md
students/k33392/Stukalov_Artem/lab/report/docs/lab4/: api.md  celery.md  docker.md  structure.md
students/k33392/Stukalov_Artem/prac/prac-2.3/: alembic.ini  pyproject.toml
students/k33392/Stukalov_Artem/prac/prac-2.3/migrations/versions/: 8c6463a95aac_skill_level_added.py
students/k33392/Stukalov_Artem/prac/prac-2.3/src/: models.py
students/k33392/Zolotukhin_Artem/lab/lab-1/: pyproject.toml
students/k33392/Zolotukhin_Artem/lab/lab-1/migrations/versions/: a95045b3823b_initial.py
students/k33392/Zolotukhin_Artem/lab/lab-1/src/: models.py
students/k33392/Zolotukhin_Artem/lab/lab-1/src/config/: env.py
students/k33392/Zolotukhin_Artem/lab/lab-1/src/routes/: users.py
students/k33392/Zolotukhin_Artem/lab/lab-1/src/services/: auth.py  users.py
students/k33392/Zolotukhin_Artem/lab/lab-2/task_2/: pyproject.toml  results.txt
students/k33392/Zolotukhin_Artem/lab/lab-2/task_2/src/: async.py  db.py  multiprocess.py  threaded.py
students/k33392/Zolotukhin_Artem/lab/report/: mkdocs.yml  pyproject.toml
students/k33392/Zolotukhin_Artem/lab/report/docs/lab1/: configuration.md  models.md  routes.md  services.md
students/k33392/Zolotukhin_Artem/lab/report/docs/lab2/: task-1.md  task-2.md
students/k33392/Zolotukhin_Artem/lab/report/site/: 404.html  index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab1/configuration/: index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab1/models/: index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab1/routes/: index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab1/services/: index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab2/task-1/: index.html
students/k33392/Zolotukhin_Artem/lab/report/site/lab2/task-2/: index.html
students/k33402/Samarov_Ilya/: task 1.py
students/k33422/Demsha_Evgenia/: mkdocs.yml
students/k33422/Nesterenko_Julia/: docker-compose.yml
task1/: main.py
task2/: abstract_solution.py  async_solution.py  docker-compose.yaml  entities.py  main.py
the_lab/: auth.py  connection.py  main.py  models.py
the_lab/migrations/versions/: 0d29e2dd0ad1_models_upd.py  20a8c16f8e02_models_upd.py  23062d31572e_models_upd.py  2339d24fe0aa_models_upd.py  451abe9b840e_models_upd.py  559a4ea5cd21_models_upd.py  (+11 more)
the_lab_2/task_1/: sum_async.py  sum_multiprocessing.py  sum_naive.py  sum_threading.py
the_lab_2/task_2/: book_async.py  book_multiprocessing.py  book_naive.py  book_parser.py  book_threading.py
the_lab_3/: docker-compose.yml  requirements.txt
the_lab_3/app/: Dockerfile  auth.py  main.py  models.py
the_lab_3/web_parser/: Dockerfile  async_parser.py  base_models.py  celery_parser.py  connection.py  main.py
(+1648 files in other folders)
