[tool.poetry]
name = "py-bench"
version = "0.1.0"
description = ""
authors = ["TUTOR03 <stukalov.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bench = "src.main:start"